--- a/index.html
+++ b/index.html
@@ -33,11 +33,9 @@
 
         
         <div class="about-me-section">
-            <h1><span>Skip</span>The Diet,</br>
-            Just Eat Healthy</br>
-            With Food Network</h1>
+            <h1>About Me</h1>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sint perspiciatis ullam doloribus deserunt, officia, possimus molestiae suscipit voluptas nesciunt commodi iste non praesentium ab delectus mollitia animi aliquid quam illum culpa. Dolore earum repellat nobis velit in distinctio temporibus officia cupiditate laborum voluptatem nulla, dolorem ratione commodi placeat sunt! Ullam?</p>
 
-            <h4>Imagine you don't need a diet because we provide healthy and delicious food for you!</h4>
             <a href="index.html" class="top-area-btn">Order Food</a>
         </div>
     </section>
