--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
         </div>
 
         
-        <div class="about-me-section">
+        <div class="about-me-section-text">
             <h1>About Me</h1>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sint perspiciatis ullam doloribus deserunt, officia, possimus molestiae suscipit voluptas nesciunt commodi iste non praesentium ab delectus mollitia animi aliquid quam illum culpa. Dolore earum repellat nobis velit in distinctio temporibus officia cupiditate laborum voluptatem nulla, dolorem ratione commodi placeat sunt! Ullam?</p>
+            <p>officia, possimus molestiae suscipit voluptas nesciunt commodi iste non praesentium ab delectus mollitia animi aliquid quam illum culpa. Dolore earum repellat nobis velit in distinctio temporibus officia cupiditate laborum voluptatem nulla, dolorem ratione commodi placeat sunt! Ullam?</p>
 
             <a href="index.html" class="top-area-btn">Order Food</a>
         </div>
